--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="root" style="width: 100%"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
